--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
+    "next": "^14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "next": "^14.2.3"
+    "react-resizable-panels": "^2.1.6"
   },
   "devDependencies": {
     "@types/node": "^20",
