--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -8,10 +9,13 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
+    "@shikijs/twoslash": "^1.23.0",
     "next": "^14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-resizable-panels": "^2.1.6"
+    "react-pre-hooks": "^3.1.6",
+    "react-resizable-panels": "^2.1.6",
+    "shiki": "^1.23.0"
   },
   "devDependencies": {
     "@types/node": "^20",
